fixed slideshow/header overlap bug

--- a/www/_css/sitenew.css
+++ b/www/_css/sitenew.css
@@ -324,7 +324,7 @@ footer{
 
 #content{
   position: relative;
-  margin: 0 auto 0 auto;
+  margin: 60px auto 0 auto;
   width: 100%;
   max-width: 1280px;
   background-color: #fff !important;
